--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <nav>
         <ul>
             <li><a href="#home" onclick="showSection('home')">Home</a></li>
-            <li><a href="#about" onclick="showSection('about')">Thông Tin Cá Nhân</a></li>
-            <li><a href="#skills" onclick="showSection('skills')">Kỹ Năng</a></li>
-            <li><a href="#contact" onclick="showSection('contact')">Liên Hệ</a></li>
+            <li><a href="#about" onclick="showSection('about')">About</a></li>
+            <li><a href="#skills" onclick="showSection('skills')">Skill</a></li>
+            <li><a href="#contact" onclick="showSection('contact')">Contact</a></li>
         </ul>
     </nav>
     <main>
@@ -38,7 +38,7 @@
                 <li>HTML, CSS, JavaScript</li>
                 <li>React, Vue.js</li>
                 <li>Node.js, Express</li>
-                <li>MySQL, MongoDB</li>
+               
             </ul>
         </section>
         <section id="contact" class="content-section" style="display: none;">
