--- a/index.html
+++ b/index.html
@@ -20,20 +20,18 @@
     </nav>
     <main>
         <section id="home" class="content-section">
-            <h2>Chào Mừng Đến Với Trang Cá Nhân Của Tôi!</h2>
-            <p>Trang web này chứa thông tin về tôi, các kỹ năng của tôi và cách liên hệ với tôi.</p>
+            <p>This website contains information about me, my skills and how to contact me.</p>
         </section>
         <section id="about" class="content-section" style="display: none;">
-            <h2>Thông Tin Cá Nhân</h2>
-            <p>Họ và tên:Huỳnh Thị Ngọc Trân
-            <p>Mã số sinh viên:23130342
-            <p>Lớp:DH23DTC
-            <p>Khoa Công Nghệ Thông Tin Trường Đại Học Nông Lâm 
-            <p>Niên khóa:2023-2027
+            <h2>About </h2>
+            <p>Full name :Huỳnh Thị Ngọc Trân
+            <p>Student code :23130342
+            <p>Class:DH23DTC
+           
              
         </section>
         <section id="skills" class="content-section" style="display: none;">
-            <h2>Kỹ Năng</h2>
+            <h2>Skill</h2>
             <ul>
                 <li>HTML, CSS, JavaScript</li>
                 <li>React, Vue.js</li>
@@ -42,7 +40,7 @@
             </ul>
         </section>
         <section id="contact" class="content-section" style="display: none;">
-            <h2>Liên Hệ</h2>
+            <h2>Contact</h2>
             <p>Email: 23130342@st.hcmuaf.edu.vn</p>
             <p>SĐT: 0987735239</p>
         </section>
