--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <li><a href="#about" onclick="showSection('about')">About</a></li>
             <li><a href="#skills" onclick="showSection('skills')">Skill</a></li>
             <li><a href="#contact" onclick="showSection('contact')">Contact</a></li>
+            <li><a href="#labs" onclick="showSection('labs')">Labs</a></li> 
+            
+            
         </ul>
     </nav>
     <main>
@@ -43,6 +46,15 @@
             <h2>Contact</h2>
             <p>Email: 23130342@st.hcmuaf.edu.vn</p>
             <p>SĐT: 0987735239</p>
+        </section>
+        <section id="labs" class="content-section" style="display: none;"> <!-- Phần mới cho Labs -->
+            <h2>Labs</h2>
+            <ul>
+                <li><a href="https://tran05.github.io/lab1.html">Lab 1</a></li>
+                <li><a href="https://tran05.github.io/lab2.html">Lab 2</a></li>
+                <li><a href="https://tran05.github.io/lab3.html">Lab 3</a></li>
+                <li><a href="https://tran05.github.io/lab4.html">Lab 4</a></li>
+            </ul>
         </section>
     </main>
     <footer>
