--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section id="contact" class="content-section" style="display: none;">
             <h2>Contact</h2>
             <p>Email: 23130342@st.hcmuaf.edu.vn</p>
-            <p>SĐT: 0987735239</p>
+            <p>Phone: 0987735239</p>
         </section>
         <section id="labs" class="content-section" style="display: none;"> <!-- Phần mới cho Labs -->
             <h2>Labs</h2>
