--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                 <li><a href="https://tran05.github.io/lab2.html">Lab 2</a></li>
                 <li><a href="https://tran05.github.io/lab3.html">Lab 3</a></li>
                 <li><a href="https://tran05.github.io/lab4.html">Lab 4</a></li>
+                <li><a href="https://tran05.github.io/lab5.html">Lab 5</a></li>
+
             </ul>
         </section>
     </main>
