--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <li><a href="https://tran05.github.io/lab3.html">Lab 3</a></li>
                 <li><a href="https://tran05.github.io/lab4.html">Lab 4</a></li>
                 <li><a href="https://tran05.github.io/lab5.html">Lab 5</a></li>
+                <li><a href="https://tran05.github.io/lab6.html">Lab 6</a></li>
 
             </ul>
         </section>
